Fix check for mmap failure

Docs for mmap state it returns -1 if it can't map an address rather than
null.

BUG: 421868